--- a/service/package.json
+++ b/service/package.json
@@ -2,5 +2,27 @@
   "name": "service",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prisma": "^5.10.2",
+    "typescript": "^5.3.3"
+  },
+  "scripts": {
+    "dev:api": "nodemon src/index.ts",
+    "build": "tsc -p .",
+    "start": "yarn build && nodemon dist/index.js"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.24",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0"
+  }
 }
